[package]

name = "uo-rust-libs"
version = "0.0.1"
edition = "2024"
authors = ["Tony Aldridge <tony@angry-lawyer.com>"]
readme = "README.md"
repository = "https://github.com/AngryLawyer/uo-rust-libs"
license = "MIT"
keywords = ["gamedev"]
categories = ["encoding"]

[lib]

name = "uorustlibs"
path = "src/lib.rs"

[dependencies]
byteorder = "1.5"
image = { version = "0.25", default-features = false, optional = true }

[features]
image = ["dep:image"]
